basic selection of player/season working

--- a/shotCharts.Rmd
+++ b/shotCharts.Rmd
@@ -239,10 +239,114 @@ player_photo_url = function(player_id) {
 ```
 
 
+``` {r fetch_shots_old}
+
+# fetch_shots_by_player_id_and_season = function(player_id, season) {
+#   req(player_id, season)
+#   
+#   print(player_id)
+#   print(season)
+#   
+#   # player_id <- 201939
+#   # season <- "2015-16"
+# 
+#   request = GET(
+#     "http://stats.nba.com/stats/shotchartdetail",
+#     query = list(
+#       PlayerID = player_id,
+#       Season = season,
+#       ContextMeasure = "FGA",
+#       DateFrom = "",
+#       DateTo = "",
+#       GameID = "",
+#       GameSegment = "",
+#       LastNGames = 0,
+#       LeagueID = "00",
+#       Location = "",
+#       Month = 0,
+#       OpponentTeamID = 0,
+#       Outcome = "",
+#       Period = 0,
+#       Position = "",
+#       RookieYear = "",
+#       SeasonSegment = "",
+#       SeasonType = "Regular Season",
+#       TeamID = 0,
+#       VsConference = "",
+#       VsDivision = ""
+#     )
+#   )
+# 
+#   stop_for_status(request)
+# 
+#   data = content(request)
+# 
+#   
+#   
+#   
+#   raw_shots_data = data$resultSets[[1]]$rowSet
+#   col_names = tolower(as.character(data$resultSets[[1]]$headers))
+# 
+#   if (length(raw_shots_data) == 0) {
+#     shots = data.frame(
+#       matrix(nrow = 0, ncol = length(col_names))
+#     )
+#   } else {
+#     shots = data.frame(
+#       matrix(
+#         unlist(raw_shots_data),
+#         ncol = length(col_names),
+#         byrow = TRUE
+#       )
+#     )
+#   }
+# 
+#   shots = tbl_df(shots)
+#   names(shots) = col_names
+# 
+#   shots = mutate(shots,
+#     loc_x = as.numeric(as.character(loc_x)) / 10,
+#     loc_y = as.numeric(as.character(loc_y)) / 10 + hoop_center_y,
+#     shot_distance = as.numeric(as.character(shot_distance)),
+#     shot_made_numeric = as.numeric(as.character(shot_made_flag)),
+#     shot_made_flag = factor(shot_made_flag, levels = c("1", "0"), labels = c("made", "missed")),
+#     shot_attempted_flag = as.numeric(as.character(shot_attempted_flag)),
+#     shot_value = ifelse(tolower(shot_type) == "3pt field goal", 3, 2)
+#   )
+#   
+#   
+# 
+#   return(list(player = shots))
+# }
+# 
+# default_shots = fetch_shots_by_player_id_and_season(default_player$person_id, default_season)
+
+
+
+```
+
+
+
 ``` {r fetch_shots}
 
-fetch_shots_by_player_id_and_season = function(player_id, season) {
-  req(player_id, season)
+#fetch_shots_by_player_id_and_season = function(player_id, season) {
+
+shotData <- reactive({
+  
+  print("enter shotdata")
+  
+  req(input$player_name, input$season)
+  
+  print(glimpse(players))
+  print(names(players))
+  print(input$season)
+  print(input$player_name)
+  
+  req(input$player_name, input$season)
+  
+  
+  player_id <- players[players$display_first_last==input$player_name,]$person_id
+  season <- input$season
   
   print(player_id)
   print(season)
@@ -286,6 +390,9 @@ fetch_shots_by_player_id_and_season = function(player_id, season) {
   
   raw_shots_data = data$resultSets[[1]]$rowSet
   col_names = tolower(as.character(data$resultSets[[1]]$headers))
+  
+  
+  #print(glimpse(raw_shots_data))
 
   if (length(raw_shots_data) == 0) {
     shots = data.frame(
@@ -303,6 +410,8 @@ fetch_shots_by_player_id_and_season = function(player_id, season) {
 
   shots = tbl_df(shots)
   names(shots) = col_names
+  
+ 
 
   shots = mutate(shots,
     loc_x = as.numeric(as.character(loc_x)) / 10,
@@ -314,27 +423,12 @@ fetch_shots_by_player_id_and_season = function(player_id, season) {
     shot_value = ifelse(tolower(shot_type) == "3pt field goal", 3, 2)
   )
   
-  #write_csv(shots,"curry.csv")
 
-    # prob dont need if just showing scatter plot
-  
-  # raw_league_avg_data = data$resultSets[[2]]$rowSet
-  # league_avg_names = tolower(as.character(data$resultSets[[2]]$headers))
-  # league_averages = tbl_df(data.frame(
-  #   matrix(unlist(raw_league_avg_data), ncol = length(league_avg_names), byrow = TRUE)
-  # ))
-  # names(league_averages) = league_avg_names
-  # league_averages = mutate(league_averages,
-  #   fga = as.numeric(as.character(fga)),
-  #   fgm = as.numeric(as.character(fgm)),
-  #   fg_pct = as.numeric(as.character(fg_pct)),
-  #   shot_value = ifelse(shot_zone_basic %in% c("Above the Break 3", "Backcourt", "Left Corner 3", "Right Corner 3"), 3, 2)
-  # )
 
   return(list(player = shots))
-}
+})
 
-default_shots = fetch_shots_by_player_id_and_season(default_player$person_id, default_season)
+#default_shots = fetch_shots_by_player_id_and_season(default_player$person_id, default_season)
 
 
 
@@ -696,6 +790,38 @@ inputPanel(
                       selected = default_season,
                       selectize = FALSE)
 )
+```
+
+### Season
+
+```{r}
+
+ output$seasonPlot <- renderPlot({
+
+   # if (use_short_three) {
+   #   base_court = short_three_court
+   # } else {
+   #   base_court = court
+   # }
+
+   
+   base_court = court
+   #shots <- oneGame
+   shots <- shotData()$player
+
+   base_court +
+     geom_point(
+       data = shots,
+       aes(x = loc_x, y = loc_y,
+           color = shot_made_flag),
+       alpha = 0.8, size = 0.5
+     ) +
+     scale_color_manual("", values = c(made = "#FDE725", missed = "#1F9D89"))
+
+ })
+
+plotOutput("seasonPlot")
+
 ```
 
 Column {data-width=650}
